[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "internetarchive"
description = "A Python interface to archive.org."
authors = [{name = "Jacob M. Johnson", email = "jake@archive.org"}]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dependencies = [
    "docopt>=0.6.0,<0.7.0",
    "jsonpatch>=0.4",
    "requests>=2.25.0,<3.0.0",
    "schema>=0.4.0",
    "tqdm>=4.0.0",
    "urllib3>=1.26.0",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/jjjake/internetarchive"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "safety",
    "setuptools",
]
docs = [
    "alabaster==0.7.12",
    "docutils<0.18",
    "sphinx==4.5.0",
    "sphinx-autodoc-typehints==1.18.1",
]
test = [
    "pytest==7.3.0",
    "responses==0.23.1",
    "ruff==0.0.261",
]
types = [
    "tqdm-stubs>=0.2.0",
    "types-colorama",
    "types-docopt>=0.6.10,<0.7.0",
    "types-jsonpatch>=0.1.0a0",
    "types-pygments",
    "types-requests>=2.25.0,<3.0.0",
    "types-setuptools",
    "types-ujson>=4.2.0",
    "types-urllib3>=1.26.0",
]

[project.scripts]
ia = "internetarchive.cli.ia:main"

[tool.setuptools]
packages = [
    "internetarchive",
    "internetarchive.cli",
]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "internetarchive.__version__.__version__"}

[tool.black]
line-length = 88
skip-string-normalization = "true"

[tool.codespell]
ignore-words-list = "alers"

[tool.mypy]
exclude = '^\.git/|^__pycache__/|^docs/source/conf.py$|^old/|^build/|^dist/|\.tox'
python_version = "3.9"
install_types = true
pretty = true
scripts_are_modules = true
show_error_codes = true
show_error_context = true

[tool.ruff]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # McCabe cyclomatic complexity
  "E",    # pycodestyle
  "EXE",  # flake8-executable
  "F",    # Pyflakes
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "PIE",  # flake8-pie
  "PL",   # Pylint
  "PT",   # flake8-pytest-style
  "PYI",  # flake8-pyi
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit
  "SLF",  # flake8-self
  "T10",  # flake8-debugger
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
  # "A",    # flake8-builtins
  # "ANN",  # flake8-annotations
  # "ARG",  # flake8-unused-arguments
  # "BLE",  # flake8-blind-except
  # "COM",  # flake8-commas
  # "D",    # pydocstyle
  # "DJ",   # flake8-django
  # "DTZ",  # flake8-datetimez
  # "EM",   # flake8-errmsg
  # "ERA",  # eradicate
  # "FBT",  # flake8-boolean-trap
  # "G",    # flake8-logging-format
  # "INP",  # flake8-no-pep420
  # "N",    # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",   # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PTH",  # flake8-use-pathlib
  # "Q",    # flake8-quotes
  # "RET",  # flake8-return
  # "SIM",  # flake8-simplify
  # "T20",  # flake8-print
  # "TCH",  # flake8-type-checking
  # "TRY",  # tryceratops
]
ignore = [
  "B904",
  "F401",
  "F841",
  "PLC1901",
  "PLR2004",
  "PLR5501",
  "PLW0603",
  "PLW2901",
  "RUF001",
  "RUF005",
  "S101",
  "S103",
  "S105",
  "S106",
  "S318",
  "S324",
]
target-version = "py37"

line-length = 102

[tool.ruff.mccabe]
max-complexity = 33

[tool.ruff.pylint]
max-args = 23
max-branches = 33
max-statements = 124

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*" = [
  "PT017",
  "S101",
]
"tests/conftest.py" = ["B018", "F811"]
"tests/cli/test_ia_list.py" = ["E741"]
"tests/test_api.py" = ["E712"]
"tests/test_config.py" = ["PT011"]
