[metadata]
name = internetarchive
version = attr: internetarchive.__version__
description = A Python interface to archive.org.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jjjake/internetarchive
author = Jacob M. Johnson
author_email = jake@archive.org
license = AGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
    internetarchive
    internetarchive.cli
install_requires =
    docopt>=0.6.0,<0.7.0
    jsonpatch>=0.4
    requests>=2.25.0,<3.0.0
    schema>=0.4.0
    tqdm>=4.0.0
    urllib3>=1.26.0
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    ia = internetarchive.cli.ia:main

[options.extras_require]
all =
    %(dev)s
    %(test)s
    %(types)s
dev =
    black
    flake8
    flake8-2020
    flake8-bugbear
    flake8-comprehensions
    mypy
    pytest
    pyupgrade
    safety
test =
    flake8==4.0.1
    pytest==7.1.2
    responses==0.20.0
types =
    types-docopt
    types-requests
    types-ujson
    types-urllib3

[options.package_data]
* = py.typed

[codespell]
ignore-words-list = alers

[flake8]
ignore = E128,E722,F401,F841,W503,W605
max-complexity = 43
max-line-length = 102
per-file-ignores =
    ./docs/source/conf.py: E121,E122,E265
    ./tests/conftest.py: F811
    ./tests/cli/test_ia_list.py: E741
    ./tests/test_api.py: E712
show-source = true
statistics = true

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
# strict = True
