[metadata]
name = internetarchive
version = attr: internetarchive.__version__
description = A Python interface to archive.org.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jjjake/internetarchive
author = Jacob M. Johnson
author_email = jake@archive.org
license = AGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
    internetarchive
    internetarchive.cli
install_requires =
    docopt>=0.6.0,<0.7.0
    jsonpatch>=0.4
    requests>=2.25.0,<3.0.0
    schema>=0.4.0
    tqdm>=4.0.0
    urllib3>=1.26.0
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    ia = internetarchive.cli.ia:main

[options.extras_require]
all =
    %(dev)s
    %(test)s
    %(types)s
dev =
    black
    flake8
    flake8-2020
    flake8-bugbear
    flake8-comprehensions
    mypy
    pre-commit
    pytest
    pyupgrade
    safety
    setuptools
docs =
    alabaster==0.7.12
    docutils<0.18
    sphinx==4.5.0
    sphinx-autodoc-typehints==1.18.1
test =
    flake8==4.0.1
    pytest==7.1.2
    responses==0.20.0
types =
    tqdm-stubs>=0.2.0
    types-docopt>=0.6.10,<0.7.0
    types-jsonpatch>=0.1.0a0
    types-requests>=2.25.0,<3.0.0
    types-setuptools
    types-ujson>=4.2.0
    types-urllib3>=1.26.0

[options.package_data]
* = py.typed

[codespell]
ignore-words-list = alers

[flake8]
ignore = E128,E722,F401,F841,W503,W605
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.tox
max-complexity = 43
max-line-length = 102
per-file-ignores =
    ./tests/conftest.py: F811
    ./tests/cli/test_ia_list.py: E741
    ./tests/test_api.py: E712
show-source = true
statistics = true

[mypy]
exclude = ^\.git/|^__pycache__/|^docs/source/conf.py$|^old/|^build/|^dist/|\.tox
python_version = 3.9
show_error_codes = True
pretty = True

[isort]
profile = black

[tool:black]
line-length = 102
skip-string-normalization = true
