[metadata]
name = internetarchive
version = attr: internetarchive.__version__.__version__
description = A Python interface to archive.org.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jjjake/internetarchive
author = Jacob M. Johnson
author_email = jake@archive.org
license = AGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
    internetarchive
    internetarchive.cli
install_requires =
    jsonpatch>=0.4
    requests>=2.25.0,<3.0.0
    schema>=0.4.0
    tqdm>=4.0.0
    urllib3>=1.26.0
    importlib-metadata>=3.6.0 ;python_version <= "3.10"
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    ia = internetarchive.cli.ia:main

[options.extras_require]
all =
    %(dev)s
    %(test)s
    %(types)s
dev =
    black
    mypy
    pre-commit
    pytest
    safety
    setuptools
docs =
    alabaster==0.7.12
    docutils<0.18
    sphinx==4.5.0
    sphinx-autodoc-typehints==1.18.1
test =
    pytest==7.1.2
    responses==0.20.0
    ruff==0.0.269
types =
    tqdm-stubs>=0.2.0
    types-colorama
    types-jsonpatch>=0.1.0a0
    types-pygments
    types-requests>=2.25.0,<3.0.0
    types-setuptools
    types-ujson>=4.2.0
    types-urllib3>=1.26.0

[options.package_data]
* = py.typed

[codespell]
ignore-words-list = alers

[mypy]
exclude = ^\.git/|^__pycache__/|^docs/source/conf.py$|^old/|^build/|^dist/|\.tox
python_version = 3.9
pretty = True
scripts_are_modules = True
show_error_codes = True
show_error_context = True

[tool:black]
line-length = 102
skip-string-normalization = true
